# docs/swagger.yaml
@@ -207,6 +207,24 @@ definitions:
         example: iphone-15-pro-max
         type: string
     type: object
+  internal_identity_delivery_http.LoginRequest:
+    properties:
+      email:
+        example: admin@gmail.com
+        type: string
+      password:
+        example: hash123
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  internal_identity_delivery_http.LoginResponse:
+    properties:
+      token:
+        example: eyJhbGciOiJIUzI1Ni...
+        type: string
+    type: object
 host: localhost:8081
 info:
   contact:
@@ -232,6 +250,36 @@ info:
   title: E-Commerce API
   version: "1.0"
 paths:
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Authenticates a user and returns a JWT Token
+      parameters:
+      - description: Login Credentials
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_identity_delivery_http.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/internal_identity_delivery_http.LoginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
+      summary: User Login
+      tags:
+      - identity
   /categories:
     get:
       consumes:
@@ -292,10 +340,12 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
-        "500":
-          description: Internal Server Error
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Create a new category
       tags:
       - categories
@@ -319,10 +369,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Delete a category
       tags:
       - categories
@@ -385,6 +441,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
         "404":
           description: Not Found
           schema:
@@ -393,6 +453,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Update a category
       tags:
       - categories
@@ -489,10 +551,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Create a new product
       tags:
       - products
@@ -516,10 +584,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Delete a product
       tags:
       - products
@@ -582,6 +656,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
         "404":
           description: Not Found
           schema:
@@ -590,6 +668,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/e-commerce-go_internal_shared_response.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Update a product
       tags:
       - products
@@ -627,6 +707,8 @@ paths:
       tags:
       - products
 securityDefinitions:
-  BasicAuth:
-    type: basic
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
