# internal/identity/repository/user_repository.go
@@ -1,0 +1,31 @@
+package repository
+
+import (
+	"e-commerce-go/internal/identity/domain"
+	"errors"
+
+	"gorm.io/gorm"
+)
+
+type userRepository struct {
+	db *gorm.DB
+}
+
+func NewUserRepository(db *gorm.DB) domain.UserRepository {
+	return &userRepository{db: db}
+}
+
+func (r *userRepository) GetByEmail(email string) (*domain.User, error) {
+	var user domain.User
+
+	err := r.db.Where("email = ?", email).First(&user).Error
+
+	if err != nil {
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			return nil, errors.New("user not found")
+		}
+		return nil, err
+	}
+
+	return &user, nil
+}
